# Isaac-GS

./: README.md  pyproject.toml  setup.sh
debug/: teleop.py
deploy/: deploy.py
deploy/config/: emcl_config.yaml  slam2_params.yaml
deploy/launch/: emcl2_launch.py  hesai_lidar_launch.py  slam2_launch.py  sony_imu_launch.py
envs/: gym_wrapper.py  isaac_env.py
envs/sensors/: camera_sensor.py
stage_generation/: compose_stage.py  convert_gs.py  convert_mesh.py
tasks/point_navigation/: __init__.py  check_env_v2.py  config.py  test.py  train.py
tasks/point_navigation/env/: __init__.py  camera_sensor.py  gym_wrapper.py  isaac_env.py
tasks/point_navigation/policy/: __init__.py  cnn_encoder.py  network.py  policy.py  sb3_policy.py
