[project]
name = "isaac-gs"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    # RL
    "gymnasium>=1.3.0",
    # 実験ログ
    "wandb>=0.27.0",
    # 画像処理（deploy.py で使用）
    "Pillow>=10.0.0",
    # コンフィグ管理
    "pydantic>=2.0",
    # プログレスバー
    "tqdm>=4.0",
]

# IsaacSim と PyTorch は setup.sh で別途インストール（バージョン競合を避けるため）

[tool.setuptools.packages.find]
include = ["envs*", "tasks*"]
